2007-02-22  Patrick van Staveren <trick@vanstaveren.us>

	* src/Base/CameraFile.cs: add another constructor to allow passing
	of integer file descriptor.

2007-02-04  Patrick van Staveren <trick@vanstaveren.us> 

	* libgphoto2-sharp.mdp: Updated MonoDevelop project
	
	* src/Base/ErrorCodes.cs: Updated to match newer error code values
	
	* src: updated svn:ignore

2007-01-31  Patrick van Staveren  <trick@vanstaveren.us>

	* src/{File,Camera,Detector}.cs: Starting to prototype fully OO
	classes.

	* configure.ac: Use gmcs rather than mcs, to give us .NET 2.0
	features (collections, for one).  Both Banshee and F-Spot use 2.0
	anyway, so this won't be an issue but will provide us with a few
	extra features.

	* NEWS: updated

2007-01-30  Patrick van Staveren  <trick@vanstaveren.us>

	* src/*: moved everything to a new namespace,
	Gphoto2.Base and moved all files into subdir.

	* configure.ac: bump to 2.3.99.0.trunk.

	* NEWS, TODO: updated.

	* src/en/*: updated docs for new namespace.

	* src/Makefile.am: fixed up doc updater.

	* src/Base/CameraFile.cs: fd method uses a UnixStream
	rather than a raw integer.

2007-01-23  Patrick van Staveren  <trick@vanstaveren.us>

	* src/CameraFilesystem.cs: retab

2007-01-19  Patrick van Staveren  <trick@vanstaveren.us>

	* TODO: updated.

	* libgphoto2-sharp.md{s,p}: added MD project/solution.

	* src/Camera.cs: more changes to GetStorageInformation,
	it should work for >1 storage device now.

2007-01-18  Patrick van Staveren  <trick@vanstaveren.us>

	* src/*: move DllLoader lines to end of classes.
	
	* src/todo: updated

	* src/TestGPhoto2Sharp.cs: wrap it all in an exception handler
	and return 1 on failure.  Also add use System and clean up.

	* NEWS: updated

	* src/Makefile.am: delete libgphoto2-sharp-docs.{tree,zip} on
	`make clean`

	* moved src/todo to ./TODO

2007-01-17  Patrick van Staveren  <trick@vanstaveren.us>

	* src/todo-formatting renamed to todo.

	* src/CameraFilesystem.cs: cleaned up old sizing comments.
